2008-04-29  Adam Roben  <aroben@apple.com>

        Restore the beloved COMPtr::operator&

        * platform/win/COMPtr.h: Removed the HashTableDeletedValueType
        constructor and isHashTableDeletedValue and hashTableDeletedValue
        functions.
        (WTF::): Changed constructDeletedValue to play nicely with
        COMPtr::operator&.

2008-04-29  Adam Roben  <aroben@apple.com>

        Fix assertion on launch on Windows

        * platform/graphics/win/FontPlatformData.h: Pass
        WTF::HashTableDeletedValue to the m_font constructor instead of a
        bogus -1 value. This is needed because m_font is a RefPtr.

2008-04-29  Greg Bolsinga  <bolsinga@apple.com>

        Reviewed by Darin.

        Wrapped Dashboard code with ENABLE(DASHBOARD_SUPPORT)

        * DerivedSources.make:
        * WebCore.DashboardSupport.exp: Added.
        * WebCore.base.exp:
        * WebCore.xcodeproj/project.pbxproj:
        * bindings/js/JSDOMWindowCustom.cpp:
        (WebCore::JSDOMWindow::setLocation):
        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::):
        (WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):
        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseValue):
        * css/CSSPrimitiveValue.cpp:
        (WebCore::CSSPrimitiveValue::cleanup):
        (WebCore::CSSPrimitiveValue::cssText):
        * css/CSSPropertyNames.in:
        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::applyProperty):
        * css/DashboardRegion.h:
        * css/DashboardSupportCSSPropertyNames.in: Added.
        * dom/DOMImplementation.cpp:
        (WebCore::DOMImplementation::createDocument):
        * dom/Document.cpp:
        (WebCore::Document::Document):
        (WebCore::Document::importNode):
        * dom/Document.h:
        * html/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::fill):
        (WebCore::CanvasRenderingContext2D::stroke):
        (WebCore::CanvasRenderingContext2D::clip):