@@ -1,3 +1,10 @@
+2008-04-29  Alp Toker  <alp@nuanti.com>
+
+        GTK+ build fix attempt following breakage in r32700 which
+        conditionalised dashboard support.
+
+        * GNUmakefile.am:
+
 2008-04-29  Adam Roben  <aroben@apple.com>
 
         Restore the beloved COMPtr::operator&
